# aigis

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  package-lock.json  package.json
cli-python/: README.md  pyproject.toml
cli-python/aigis_cli/: SKILL.md  __init__.py  annotate.py  auto_verify.py  build.py  checksum.py  classify.py  cli.py  fetch.py  init_ide.py  jurisdiction.py  keywords.py  report.py  search.py
cli-python/aigis_cli/content/implement/: explainability.md  fallback-patterns.md  input-validation.md  monitoring.md  supply-chain.md
cli-python/aigis_cli/content/index/: audit-scan.md  auto-verify-rules.json  taxonomy.md
cli-python/aigis_cli/content/resolvers/: triggers.json
cli-python/aigis_cli/content/skills/: core.md
cli-python/aigis_cli/content/skills/areas/: audit-logging.md  bias-monitoring.md  confidence-scoring.md  data-integrity.md  eu-ai-act-art-13-deployer-transparency.md  eu-ai-act-art-50-transparency-disclosure.md  eu-ai-act-art-73-incident-reporting.md  eu-ai-act-art-9-risk-management.md  human-oversight.md  input-validation.md  monitoring.md  pii-handling.md  prompt-security.md  (+1 more)
cli-python/aigis_cli/content/templates/: eu-ai-act-annex-iv.md  intended-purpose-doc.md  risk-characterization.md
cli-python/aigis_cli/content/verify/: checklist-audit-logging.md  checklist-bias-monitoring.md  checklist-fallback-patterns.md  checklist-human-oversight.md  checklist-input-validation.md  checklist-monitoring.md  checklist-pii-handling.md  checklist-rag-security.md  checklist-rate-limiting.md  checklist-supply-chain.md
(+65 files in other folders)
